--- a/src/pages/Nonprofits/styles.module.css
+++ b/src/pages/Nonprofits/styles.module.css
@@ -4,6 +4,7 @@
     width: 700px;
     max-width: 75%;
     text-align: center;
+    margin: 5%;
 }
   
 .flexContainer {
@@ -14,18 +15,43 @@
     max-width: 100%;
 }
 
+p {
+    color: white;
+}
+
+h1, h2, h3, h4 {
+    color: black
+}
+
 .timelineSection > h2 {
-    margin-left: 30%;
+    margin-left: 25%;
 }
 
 .FAQSection > h2 {
-    margin-left: 25%
+    margin-left: 25%;
+}
+
+.buttonSection {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    margin-bottom: 5%;
+}
+
+.buttonSection > div {
+    display: flex;
+    flex-direction: column; 
+    width: 700px;
+    max-width: 75%;
+    text-align: center;
 }
 
 .button {
-    width: 260px;
-    height: 68px;
-    background: rgba(60, 122, 186, 1);
+    width: 130px;
+    height: 50px;
+    background: rgba(0, 0, 0, 1);
     border-radius: 10px;
     color: white;
     display: flex;
@@ -34,7 +60,6 @@
 }
 
 .button:hover {
-    background: rgba(6, 87, 152, 1);
+    background: rgba(224, 86, 86, 1);
     color: white;
-
 }
